--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -39,7 +39,7 @@
 <div id="main">
     <canvas id="canvas"></canvas>
 </div>
-<div id="about">
+<div id="about" style="display: none">
     <button onclick="hideAbout()">hide this info</button>
     <br>
     Numbers supplied by <a href="https://socialblade.com/">socialblade.com</a>.<br>
@@ -219,8 +219,8 @@
     window.onload = function () {
         var ctx = document.getElementById('canvas').getContext('2d');
         window.myLine = new Chart(ctx, config);
-        if(localStorage.getItem('hideAbout') === 'true') {
-            hideAbout();
+        if (localStorage.getItem('hideAbout') !== 'true') {
+            document.getElementById('about').style.display = '';
         }
     };
 </script>
