--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -24,7 +24,6 @@
             background: white;
             padding: 5px;
             font-size: 10pt;
-            text-align: right;
             border: 1px solid lightgray;
             border-radius: 5px;
         }
@@ -33,8 +32,15 @@
 <body>
 <canvas id="canvas"></canvas>
 <div id="controls">
-    <button onclick="toggleOnlyRecent()" id="togR">show only recent data</button>
-    <button onclick="reset()">reset</button>
+    <button onclick="toggleControls()" id="toggleC">hide controls</button>
+    <div id="buttons">
+        <button onclick="toggleOnlyRecent()" id="togR">show only recent data</button>
+        <br>
+        <button onclick="reset()">reset</button>
+        <br>
+        <label>Refresh every <input id="intL" value="30" type="number" min="3" max="300" step="1"> seconds</label>
+        <button onclick="changeInterval()">apply</button>
+    </div>
 </div>
 <div id="about" style="display: none">
     <button onclick="hideAbout()">hide this info</button>
@@ -57,12 +63,12 @@
     getPew();
     getTesla();
 
-    setInterval(() => {
+    let dataUpdateInterval = setInterval(() => {
         getPew();
         getTesla();
     }, 30000);
 
-    setTimeout(() => {
+    let viewUpdateInterval = setTimeout(() => {
         updateOutput();
         setInterval(() => {
             updateOutput();
@@ -99,6 +105,18 @@
         }
     }
 
+    let toggleControls = function () {
+        let elStyle = document.getElementById('buttons').style;
+        let button = document.getElementById('toggleC');
+        if (elStyle.display === '') {
+            elStyle.display = 'none';
+            button.innerHTML = 'show controls';
+        } else {
+            elStyle.display = '';
+            button.innerHTML = 'hide controls';
+        }
+    };
+
     let hideAbout = function () {
         document.getElementById('about').style.display = 'none';
         localStorage.setItem('hideAbout', 'true');
@@ -113,6 +131,24 @@
             config.data.datasets[0].data = [];
             window.myLine.update();
         }
+    };
+
+    let changeInterval = function () {
+        clearInterval(dataUpdateInterval);
+        clearInterval(viewUpdateInterval);
+        let intL = document.getElementById('intL').value * 1000;
+
+        dataUpdateInterval = setInterval(() => {
+            getPew();
+            getTesla();
+        }, intL);
+
+        viewUpdateInterval = setTimeout(() => {
+            updateOutput();
+            setInterval(() => {
+                updateOutput();
+            }, intL);
+        }, 3000);
     };
 
     let toggleOnlyRecent = function () {
