--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -34,12 +34,15 @@
 <div id="controls">
     <button onclick="toggleControls()" id="toggleC">hide controls</button>
     <div id="buttons">
-        <button onclick="toggleOnlyRecent()" id="togR">show only recent data</button>
+        <label>Only show data that's
+            <input id="hours" type="number" value="24" min="0.1" max="240" step="0.1"> hours old or newer
+        </label>
+        <label><input type="checkbox" value="false" onchange="toggleOnlyRecent()">apply</label>
         <br>
         <button onclick="reset()">reset</button>
         <br>
         <label>Refresh every <input id="intL" value="30" type="number" min="3" max="300" step="1"> seconds</label>
-        <button onclick="changeInterval()">apply</button>
+        <button onclick="changeInterval()">apply</button> (<span id="refreshTimer"></span>s)
     </div>
 </div>
 <div id="about" style="display: none">
@@ -59,6 +62,7 @@
     let xData = localStorage.getItem('xData') ? localStorage.getItem('xData').split(',') : [];
     let yData = localStorage.getItem('yData') ? localStorage.getItem('yData').split(',') : [];
     let onlyRecent = false;
+    let lastRefresh;
 
     getPew();
     getTesla();
@@ -68,12 +72,20 @@
         getTesla();
     }, 30000);
 
-    let viewUpdateInterval = setTimeout(() => {
+    let viewUpdateInterval;
+
+    setTimeout(() => {
         updateOutput();
-        setInterval(() => {
+        viewUpdateInterval = setInterval(() => {
             updateOutput();
         }, 30000);
     }, 3000);
+
+    let refreshTimer = document.getElementById('refreshTimer');
+
+    setInterval(() => {
+        refreshTimer.innerHTML = -((lastRefresh + +document.getElementById('intL').value) - +moment().unix());
+    }, 100);
 
     function getPew() {
         let xhttp = new XMLHttpRequest();
@@ -101,6 +113,7 @@
         if (pewpewdies > 0 && tesla > 0) {
             diff = pewpewdies - tesla;
             document.title = Intl.NumberFormat().format(diff);
+            lastRefresh = moment().unix();
             updateGraph();
         }
     }
@@ -143,9 +156,8 @@
             getTesla();
         }, intL);
 
-        viewUpdateInterval = setTimeout(() => {
-            updateOutput();
-            setInterval(() => {
+        setTimeout(() => {
+            viewUpdateInterval = setInterval(() => {
                 updateOutput();
             }, intL);
         }, 3000);
@@ -154,21 +166,34 @@
     let toggleOnlyRecent = function () {
         onlyRecent = !onlyRecent;
         if (onlyRecent) {
-            let didi = [];
-            config.data.datasets[0].data.forEach(function (data) {
-                if (data.x.unix() + 86400 > moment().unix()) {
-                    didi.push(data);
-                }
-            });
-            config.data.datasets[0].data = didi;
-            window.myLine.update();
-            document.getElementById('togR').innerHTML = 'show all data';
+            let hours = document.getElementById('hours');
+            if (hours.value < 3) {
+                config.options.scales.xAxes[0].time.unit = 'minute';
+            } else if (hours.value < 24) {
+                config.options.scales.xAxes[0].time.unit = 'hour';
+            } else {
+                config.options.scales.xAxes[0].time.unit = 'day';
+            }
+            restrictTimeFrame(hours.value);
+            hours.disabled = 'disabled';
         } else {
             config.data.datasets[0].data = getLocalData();
+            config.options.scales.xAxes[0].time.unit = 'day';
             window.myLine.update();
-            document.getElementById('togR').innerHTML = 'show only recent data';
+            hours.disabled = '';
         }
     };
+
+    function restrictTimeFrame(hours) {
+        let dayDa = [];
+        config.data.datasets[0].data.forEach(function (data) {
+            if (data.x.unix() + hours * 3600 > moment().unix()) {
+                dayDa.push(data);
+            }
+        });
+        config.data.datasets[0].data = dayDa;
+        window.myLine.update();
+    }
 
     function updateGraph() {
         if (window.myLine) {
@@ -185,6 +210,10 @@
                 localStorage.setItem('xData', xData);
                 localStorage.setItem('yData', yData);
             });
+
+            if (onlyRecent) {
+                restrictTimeFrame(document.getElementById('hours').value);
+            }
 
             window.myLine.update();
         }
