--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -199,12 +199,24 @@
         if (window.myLine) {
             let time = moment();
             config.data.labels.push(time);
-
             config.data.datasets.forEach(function (dataset) {
+                let recentChange = 0;
+                let recentChangeString = '';
                 dataset.data.push({x: time, y: diff});
+                if (dataset.data.length > 0) {
+                    recentChange = dataset.data[dataset.data.length - 1].y -
+                        dataset.data[dataset.data.length - Math.min(dataset.data.length, 6)].y;
+                    console.log(recentChange);
+                    if (recentChange > 0) {
+                        recentChangeString = '+' + recentChange;
+                    } else {
+                        recentChangeString = recentChange;
+                    }
+                    recentChangeString += ' since last ' + Math.min(dataset.data.length, 5) + ' refreshes';
+                }
                 config.options.title.text = 'Poods at ' + Intl.NumberFormat().format(pewpewdies) +
                     ' - Tesla at ' + Intl.NumberFormat().format(tesla) +
-                    ' = ' + Intl.NumberFormat().format(diff) + ' more subs';
+                    ' = ' + Intl.NumberFormat().format(diff) + ' more subs (' + recentChangeString + ')';
                 xData.push(time.format());
                 yData.push(diff);
                 localStorage.setItem('xData', xData);
