--- a/pewpewdies/index.html
+++ b/pewpewdies/index.html
@@ -201,7 +201,7 @@
             config.data.labels.push(time);
             config.data.datasets.forEach(function (dataset) {
                 let recentChange = 0;
-                let recentChangeString = '';
+                let recentChangeString = '(';
                 let recentChangeTime = 0;
                 dataset.data.push({x: time, y: diff});
                 if (dataset.data.length > 0) {
@@ -213,16 +213,16 @@
                         )
                     ;
                     if (recentChange > 0) {
-                        recentChangeString = '+' + recentChange;
+                        recentChangeString += '+' + recentChange;
                     } else {
-                        recentChangeString = recentChange;
+                        recentChangeString += recentChange;
                     }
                     recentChangeString += ' since last ' + Math.min(dataset.data.length, 5) + ' refreshes (' +
-                        Intl.NumberFormat().format((recentChange / recentChangeTime) * 60000) + ' per minute)';
+                        Intl.NumberFormat().format((recentChange / recentChangeTime) * 60000) + ' per minute))';
                 }
                 config.options.title.text = 'Poods at ' + Intl.NumberFormat().format(pewpewdies) +
                     ' - Tesla at ' + Intl.NumberFormat().format(tesla) +
-                    ' = ' + Intl.NumberFormat().format(diff) + ' more subs (' + recentChangeString + ')';
+                    ' = ' + Intl.NumberFormat().format(diff) + ' more subs ' + recentChangeString;
                 xData.push(time.format());
                 yData.push(diff);
                 localStorage.setItem('xData', xData);
